--- a/index.html
+++ b/index.html
@@ -15,10 +15,49 @@
   </head>
   <body>
     <div class="container">
-      <h1>
-        Hello World
-      </h1>
-      <a href="" class="btn btn-primary">Click me</a>
+      <div class="weather-app">
+        <h1>
+          New York
+        </h1>
+        <ul>
+          <li>
+            Friday 05:00
+          </li>
+          <li>
+            Clear
+          </li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+              alt="Clear"
+            />
+            12°C | °F
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>
+                Precipitation: 0%
+              </li>
+              <li>
+                Humidity: 73%
+              </li>
+              <li>
+                Wind: 2 km/h
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a
+          href="https://github.com/wecodeschool/vanilla-weather-app"
+          target="_blank"
+          >Open-source code</a
+        >
+        by Matt Delac
+      </small>
     </div>
     <script src="src/app.js"></script>
   </body>
