Styled the temperature section

--- a/index.html
+++ b/index.html
@@ -15,38 +15,48 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>
-          New York
-        </h1>
-        <ul>
-          <li>
-            Friday 05:00
-          </li>
-          <li>
-            Clear
-          </li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-              alt="Clear"
-            />
-            12°C | °F
-          </div>
-          <div class="col-6">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>
+              New York
+            </h1>
             <ul>
               <li>
-                Precipitation: 0%
+                Friday 05:00
               </li>
               <li>
-                Humidity: 73%
-              </li>
-              <li>
-                Wind: 2 km/h
+                Clear
               </li>
             </ul>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                  alt="Clear"
+                  class="float-left"
+                />
+                <div class="float-left">
+                  <strong>12</strong
+                  ><span class="units">°C | <a href="#">°F</a></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>
+                  Precipitation: 0%
+                </li>
+                <li>
+                  Humidity: 73%
+                </li>
+                <li>
+                  Wind: 2 km/h
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
         <small>
