Showing the current temperature

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
@@ -18,16 +20,12 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-            <h1>
-              New York
-            </h1>
+            <h1 id="city"></h1>
             <ul>
               <li>
                 Friday 05:00
               </li>
-              <li>
-                Clear
-              </li>
+              <li id="description"></li>
             </ul>
           </div>
           <div class="row">
@@ -39,22 +37,15 @@
                   class="float-left"
                 />
                 <div class="float-left">
-                  <strong>12</strong
+                  <strong id="temperature"></strong
                   ><span class="units">°C | <a href="#">°F</a></span>
                 </div>
               </div>
             </div>
             <div class="col-6">
               <ul>
-                <li>
-                  Precipitation: 0%
-                </li>
-                <li>
-                  Humidity: 73%
-                </li>
-                <li>
-                  Wind: 2 km/h
-                </li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
           </div>
