--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
           <div class="overview">
             <h1 id="city"></h1>
             <ul>
-              <li>
-                Friday 05:00
-              </li>
+              <li>Last updated: <span id="date"></span></li>
               <li id="description"></li>
             </ul>
           </div>
