Added dummy forecast HTML

--- a/index.html
+++ b/index.html
@@ -66,6 +66,80 @@
               </ul>
             </div>
           </div>
+          <div class="row weather-forecast">
+            <div class="col-2">
+              <h3>
+                Sun
+              </h3>
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png"
+                alt=""
+              />
+              <div class="weather-forecast-temperature">
+                <strong>22°</strong> 17°
+              </div>
+            </div>
+            <div class="col-2">
+              <h3>
+                Mon
+              </h3>
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png"
+                alt=""
+              />
+              <div class="weather-forecast-temperature">
+                <strong>22°</strong> 17°
+              </div>
+            </div>
+            <div class="col-2">
+              <h3>
+                Tue
+              </h3>
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png"
+                alt=""
+              />
+              <div class="weather-forecast-temperature">
+                <strong>22°</strong> 17°
+              </div>
+            </div>
+            <div class="col-2">
+              <h3>
+                Wed
+              </h3>
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png"
+                alt=""
+              />
+              <div class="weather-forecast-temperature">
+                <strong>22°</strong> 17°
+              </div>
+            </div>
+            <div class="col-2">
+              <h3>
+                Thu
+              </h3>
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png"
+                alt=""
+              />
+              <div class="weather-forecast-temperature">
+                <strong>22°</strong> 17°
+              </div>
+            </div>
+            <div class="col-2">
+              <h3>
+                Fri
+              </h3>
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png"
+                alt=""
+              />
+              <div class="weather-forecast-temperature">
+                <strong>22°</strong> 17°
+              </div>
+            </div>
+          </div>
         </div>
         <small>
           <a
