add unit conversion

--- a/_snapshots/search-engine/index.html
+++ b/_snapshots/search-engine/index.html
@@ -53,8 +53,12 @@
                 <div class="float-left">
                   <strong id="temperature"></strong
                   ><span class="units"
-                    ><a href="#" id="celsius-link" class="active">°C</a> |
-                    <a href="#" id="fahrenheit-link">°F</a></span
+                    ><a href="#" class="active" id="celsius-link">°C </a>|<a
+                      href="#"
+                      id="fahrenheit-link"
+                    >
+                      °F</a
+                    ></span
                   >
                 </div>
               </div>
